@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.446 2006/11/03 18:31:19 joerg Exp $
+# $NetBSD: Makefile,v 1.447 2006/11/03 20:22:46 joerg Exp $
 #
 
 COMMENT=	Packages to support the X window system
@@ -23,6 +23,7 @@ SUBDIR+=	blt
 SUBDIR+=	bwidget
 SUBDIR+=	compositeproto
 SUBDIR+=	control-center
+SUBDIR+=	damageproto
 SUBDIR+=	devilspie
 SUBDIR+=	dfm
 SUBDIR+=	dtx11session
@@ -37,6 +38,7 @@ SUBDIR+=	fbdesk
 SUBDIR+=	filerunner
 SUBDIR+=	fixesproto
 SUBDIR+=	fltk
+SUBDIR+=	fontcacheproto
 SUBDIR+=	fontsproto
 SUBDIR+=	fox
 SUBDIR+=	fspanel
@@ -199,6 +201,7 @@ SUBDIR+=	p5-X11-Protocol
 SUBDIR+=	p5-gtk
 SUBDIR+=	p5-gtk2
 SUBDIR+=	paragui
+SUBDIR+=	printproto
 SUBDIR+=	py-Pmw
 SUBDIR+=	py-Tk
 SUBDIR+=	py-Xlib
@@ -236,6 +239,7 @@ SUBDIR+=	qwspritefield
 SUBDIR+=	qwt
 SUBDIR+=	randrproto
 SUBDIR+=	ratmen
+SUBDIR+=	recordproto
 SUBDIR+=	renderproto
 SUBDIR+=	rep-gtk
 SUBDIR+=	rox-session
@@ -247,6 +251,7 @@ SUBDIR+=	ruby-gtk
 SUBDIR+=	ruby-tk
 SUBDIR+=	rxvt
 SUBDIR+=	rxvt-unicode
+SUBDIR+=	scrnsaverproto
 SUBDIR+=	speyes
 SUBDIR+=	ssystem
 SUBDIR+=	startup-notification
@@ -258,8 +263,10 @@ SUBDIR+=	tk-Tix
 SUBDIR+=	tk83
 SUBDIR+=	tkinfo
 SUBDIR+=	tkman
+SUBDIR+=	trapproto
 SUBDIR+=	tzosdclock
 SUBDIR+=	unclutter
+SUBDIR+=	videoproto
 SUBDIR+=	vte
 SUBDIR+=	wdm
 SUBDIR+=	wmavgload
@@ -280,6 +287,7 @@ SUBDIR+=	xautolock
 SUBDIR+=	xbanner
 SUBDIR+=	xbindkeys
 SUBDIR+=	xbindkeys-tk
+SUBDIR+=	xbitmaps
 SUBDIR+=	xcb
 SUBDIR+=	xclip
 SUBDIR+=	xcolors
@@ -320,6 +328,7 @@ SUBDIR+=	xgas
 SUBDIR+=	xglobe
 SUBDIR+=	xgrk
 SUBDIR+=	xhangglider
+SUBDIR+=	xineramaproto
 SUBDIR+=	xjman
 SUBDIR+=	xkbd
 SUBDIR+=	xkbset
